--- a/Whiteboard/WebContent/sass/chat.scss
+++ b/Whiteboard/WebContent/sass/chat.scss
@@ -110,5 +110,7 @@
 .chat--collapsed {
 	.chat__scrollview {
 		height: 0;
+		padding-top: 0;
+		padding-bottom: 0;
 	}
 }
